Closed Bug 1681667 Opened 5 years ago Closed 5 years ago

`mousemove` events synthesized for tests may not be fired if synthesized via the parent process

Categories

(Core :: DOM: Events, defect, P3)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When I write async mouse event tests which synthesize mouse events via the parent process for checking event deliver of the parent process, I realized that mousemove events may not be fired on content process. The reason is, mousemove events may be discarded during IPC, or coalesced with other events. However, every synthesized events are important for any tests. So, we should treat synthesized mousemove events for tests with a different path.

Every synthesized mouse event for tests are important. So, they should never
be coalesced. This is required to write mochitests which synthesize mousemove
events via the parent process.

Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/608c0563811f Make `BrowserChild` never coalesce/discard synthesized mouse events for test r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: