Bug 1681667 - Make `BrowserChild` never coalesce/discard synthesized mouse events for test r=smaug

Every synthesized mouse event for tests are important.  So, they should never
be coalesced.  This is required to write mochitests which synthesize `mousemove`
events via the parent process.

Differential Revision: https://phabricator.services.mozilla.com/D99317